--- a/gallery-single-post4.html
+++ b/gallery-single-post4.html
@@ -39,7 +39,7 @@
 			<div class="article">
 				<h4>O Movimento é Relativo</h4>
 			<div class="container"
-				<embed src="files/omer" type="application/pdf" width="100%" height="600px"/>
+				<embed src="files/omer.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/>
 			</div>
 			</div>
 		</div>
