--- a/gallery-single-post1.html
+++ b/gallery-single-post1.html
@@ -35,13 +35,13 @@
 	<div id="body">
 		<h1><span>Física</span></h1>
 		<div>
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/atZ2CynfN5A"
-				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/OnJnfyqUxjU"
+		  frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		  
 			<div class="article">
 				<h4>O Movimento é relativo</h4>
 			<div class="container"
-			     <embed src="files/omer.pdf#toolbar=0" type="application/pdf" width="100%" height=""600px/>
+			     <embed src="files/fisica/omer.pdf#toolbar=0" type="application/pdf" width="100%" height=""600px/>
 		</div>
 	</div>
 	<div id="footer">
