--- a/gallery-single-post2.html
+++ b/gallery-single-post2.html
@@ -35,13 +35,12 @@
 	<div id="body">
 		<h1><span>FÍSICA</span></h1>
 		<div>
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/atZ2CynfN5A"
-				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<div class="article">
-				<h4>Centro de Massa pt1</h4>
-				<p>
-				  Centro de Massa....
-				</p>
+				<h4>Exércícios Sobre Relatividade</h4>
+			  <div class="container">
+				  <embed src="files/fisica/esr20.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/> 
+			  </div>
+				
 			</div>
 		</div>
 	</div>
