--- a/fil1.html
+++ b/fil1.html
@@ -42,6 +42,10 @@
 			<div class="article">
 				<h4>Filosofia Africana</h4>
 			</div>
+			  <p>
+				 Ora bem...
+			  </p>
+				
 		</div>
 	</div>
 	<div id="footer">
