--- a/gallery-single-post1.html
+++ b/gallery-single-post1.html
@@ -27,7 +27,7 @@
 			<li>
 				<a href="blog.html">blog</a>
 			</li>
-<li>
+                        <li>
 				<a href="contact.html">contact</a>
 			</li>
 		</ul>
@@ -39,9 +39,12 @@
 		  frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		  
 			<div class="article">
-				<h4>O Movimento é relativo</h4>
-			<div class="container"
-			     <embed src="files/fisica/omer.pdf#toolbar=0" type="application/pdf" width="100%" height=""600px/>
+				<h4>Movimento relativo</h4>
+				
+			    <div class="container"
+			       <embed src="files/fisica/omer.pdf#toolbar=0" type="application/pdf" width="100%" height=""600px/>
+			   </div>
+			</div>
 		</div>
 	</div>
 	<div id="footer">
