--- a/gallery.html
+++ b/gallery.html
@@ -201,6 +201,11 @@
 					<img src="images/bio.jpg" alt="">
 				</a>
 			</li>
+			<li>
+				<a href="bio7.html" target="_blank">
+					<img src="images/bio.jpg" alt="">
+				</a>
+			</li>
 		</ul>
 		
 				  <h1><span> L. P O R T U G U E S A</span></h1>
