--- a/gallery.html
+++ b/gallery.html
@@ -344,6 +344,41 @@
 			</li>
 		</ul>
 		
+		<h1><span> G E O L O G I A</span></h1>
+		<ul class="gallery">
+			<li>
+				<a href="Geo1.html" target="_blank">
+					<img src="images/geo.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="Geo2.html" target="_blank">
+					<img src="images/geo.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="Geo3.html" target="_blank">
+					<img src="images/geo.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="Geo4.html" target="_blank">
+					<img src="images/geo.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="Geo5.html" target="_blank">
+					<img src="images/geo.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="Geo6.html" target="_blank">
+					<img src="images/geo.jpg" alt="">
+				</a>
+			</li>
+		</ul>
+		
+		
 	</div>
 	<div id="footer">
 		<div>
