--- a/blog.html
+++ b/blog.html
@@ -41,9 +41,9 @@
 						<img src="images/blog1.jpg" alt="">
 					</a>
 					<div>
-						<h3>Matéria de física</h3>
+						<h3>Vazio</h3>
 						<p>
-						    Explicação básica sobre a matéria nova
+						    Sem conteúdo...
 						</p>
 						<a href="blog-single-post1.html" class="more">ler isto</a>
 					</div>
@@ -53,10 +53,9 @@
 						<img src="images/body.jpg" alt="">
 					</a>
 					<div>
-						<h3>Matéria de Biologia</h3>
+						<h3>Vazio</h3>
 						<p>
-							As fossas nasais (ou cavidades nasais) e a boca são os locais de entrada do ar que se dirige ao nosso sistema respiratório.
-
+							Sem conteúdo
 
 						</p>
 						<a href="blog-single-post2.html" class="more">ler isto</a>
@@ -67,9 +66,9 @@
 						<img src="images/quim1.jpg" alt="">
 					</a>
 					<div>
-						<h3>Matéria de Química</h3>
+						<h3>Vazio</h3>
 						<p>
-							Alcinos...
+							Sem conteúdo
 						</p>
 						<a href="blog-single-post3.html" class="more">ler isto</a>
 					</div>
