--- a/blog-single-post1.html
+++ b/blog-single-post1.html
@@ -33,23 +33,15 @@
 		</ul>
 	</div>
 	<div id="body">
-		<h1><span>Matéria de Física</span></h1>
+		<h1><span>Vazio</span></h1>
 		<div>
-			<img src="images/bio1.jpg" alt="">
+			<img src="images/.jpg" alt="">
 
 
 			<div class="article">
-				<h2> O Movimento Relativo</h2>
+				<h2> Sem conteúdo</h2>
 				<p>
-					Olá bom dia. De acordo com a Física, o movimento é, na realidade, sempre um conceito relativo, pois dependerá de um sistema de referência ou de referencial particular, à escolha do observador.
-
-Sendo assim, todo o conceito de movimento ou de repouso são relativos, pois dependerão da ótica de quem observa e/ou do referencial adotado.
-
-Por exemplo: quando estamos dentro de um carro em movimento em uma pista e vemos as árvores do lado de fora, para nós elas também estão em movimento; porém, na realidade, elas estão em repouso (também relativo).
-
-Importante lembrar, também, que não existem os chamados movimentos absolutos e repouso absolutos.
-
-Espero ter ajudado!
+			
 				</p>
 			</div>
 		</div>
