--- a/gallery-single-post1.html
+++ b/gallery-single-post1.html
@@ -49,7 +49,7 @@
 	</div>
 	<div id="footer">
 		<div>
-			<p>&copy; 2020 by Riqueza CM. All rights reserved.</p>
+			<p>&copy; 2020 by RiquezaXIX. All rights reserved.</p>
 			<ul>
 				<li>
 					<a href="https://twitter.com/InacioCM19"  target="_blank" id="twitter">twitter</a>
