--- a/gallery-single-post2.html
+++ b/gallery-single-post2.html
@@ -38,7 +38,7 @@
 			<div class="article">
 				<h4>Exércícios Sobre Relatividade</h4>
 			  <div class="container">
-				  <embed src="files/fisica/esr20.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/> 
+				  <embed src="files/fisica/esr20.pdf#toolbar0" type="application/pdf" width="100%" height="600px"/> 
 			  </div>
 				
 			</div>
@@ -46,7 +46,7 @@
 	</div>
 	<div id="footer">
 		<div>
-			<p>&copy; 2023 by Mustacchio. All rights reserved.</p>
+			<p>&copy; 2023 by RiquezaXIX. All rights reserved.</p>
 			<ul>
 				<li>
 					<a href="https://twitter.com/InacioCM19"  target="_blank" id="twitter">twitter</a>
