--- a/gallery-single-post2.html
+++ b/gallery-single-post2.html
@@ -38,7 +38,7 @@
 			<div class="article">
 				<h4>Exércícios Sobre Relatividade</h4>
 			  <div class="container">
-				  <embed src="files/fisica/esr20.pdf#toolbar0" type="application/pdf" width="100%" height="600px"/> 
+				  <embed src="files/fisica/esr20.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/> 
 			  </div>
 				
 			</div>
