--- a/Geo1.html
+++ b/Geo1.html
@@ -39,7 +39,7 @@
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			
 			<div class="article">
-			<h4>Transporte de Materias</h4> 
+			<h4>Transporte de Materiais</h4> 
 			
 				
 			</div>
