--- a/gallery-single-post6.html
+++ b/gallery-single-post6.html
@@ -33,20 +33,19 @@
 		</ul>
 	</div>
 	<div id="body">
-		<h1><span>...</span></h1>
+		<h1><span>Físcia</span></h1>
 		<div>
 			<img src="images/green.png" alt="">
 			<div class="article">
-				<h4>...</h4>
+				<h4>Sem conteúdo</h4>
 				<p>
-				Our website templates are created with inspiration, checked for quality and originality and meticulously sliced and coded. What’s more, they’re absolutely free! You can do a lot with them. You can modify them.
 				</p>
 			</div>
 		</div>
 	</div>
 	<div id="footer">
 		<div>
-			<p>&copy; 2023 by Mustacchio. All rights reserved.</p>
+			<p>&copy; 2020 by RiquezaXIX. All rights reserved.</p>
 			<ul>
 				<li>
 					<a href="https://twitter.com/InacioCM19"  target="_blank" id="twitter">twitter</a>
