--- a/gallery.html
+++ b/gallery.html
@@ -23,6 +23,35 @@
 			</li>
 			<li class="selected">
 				<a href="gallery.html">matéria</a>
+				 <ul class="sub-menu"> 
+				    <li>
+				          <a href="gallery.html#Matemática">Matemática</a>
+				      </li>
+				     <li>
+			          <a href="gallery.html#Química">Química</a>
+			             </li>
+			        <li>
+			          <a href="gallery.html#Filosofia">Filosofia</a>
+			        </li>
+			        <li>
+			          <a href="gallery.html#Biologia">Biologia</a>
+			         </li>
+			         <li>
+			          <a href="gallery.html#Lp">L.Portuguesa</a>
+			         </li>
+			         <li>
+			          <a href="gallery.html#G.D">G.Descritiva</a> 
+			          </li>
+			          <li> 
+			          <a href="gallery.html#Psicologia">Psicologia</a>
+			          <li>
+			          <a href="gallery.html#Inglês">Inglês</a>
+			         </li>
+			         <li>
+			          <a href="gallery.html#Geologia">Geologia</a>
+					</li>
+				</ul>
+				<span class="arrow">&#9660;</span>
 			</li>
 			<li>
 				<a href="blog.html">blog</a>
@@ -34,6 +63,7 @@
 	</div>
 	<div id="body">
 		<h1><span>F Í S I C A</span></h1>
+		
 		<ul class="gallery">
 			<li>
 				<a href="gallery-single-post1.html" target="_blank">
@@ -66,8 +96,9 @@
 				</a>
 			</li>
 		</ul>
-			
+			<a name="Matemática">
 		  <h1><span> M A T E M Á T I C A</span></h1>
+		         </a>  
 		<ul class="gallery">
 			<li>
 				<a href="mat1.html" target="_blank">
@@ -101,7 +132,9 @@
 				</a>
 			</li>
 		</ul>
+		                      <a name="Química">
 				  <h1><span> Q U Í M I C A</span></h1>
+		                          </a>
 		<ul class="gallery">
 			<li>
 				<a href="qui1.html" target="_blank">
@@ -135,7 +168,9 @@
 			</li>
 			
 		</ul>
+		                     <a name="Filosofia">
 				  <h1><span> F I L O S O F I A </span></h1>
+		</a>
 		<ul class="gallery">
 			<li>
 				<a href="fil1.html" target="_blank">
@@ -168,8 +203,9 @@
 				</a>
 			</li>
 		</ul>
-		
+		<a name="Biologia">
 				  <h1><span> B I O L O G I A</span></h1>
+		</a>
 		<ul class="gallery">
 			<li>
 				<a href="bio1.html" target="_blank">
@@ -207,8 +243,9 @@
 				</a>
 			</li>
 		</ul>
-		
+		<a name="L.p">
 				  <h1><span> L. P O R T U G U E S A</span></h1>
+		</a>
 		<ul class="gallery">
 			<li>
 				<a href="lp1.html" target="_blank">
@@ -241,8 +278,9 @@
 				</a>
 			</li>
 		</ul>
-		
+		<a name="G.D">
 				  <h1><span> G.D</span></h1>
+		</a>
 		<ul class="gallery">
 			<li>
 				<a href="gd1.html" target="_blank">
@@ -275,8 +313,9 @@
 				</a>
 			</li>
 		</ul>
-		
+		<a name="Psicologia">
 				  <h1><span> P S I C O L O G I A</span></h1>
+		</a>
 		<ul class="gallery">
 			<li>
 				<a href="psi1.html" target="_blank">
@@ -309,8 +348,9 @@
 				</a>
 			</li>
 		</ul>
-		
+		<a name="Inglês">
 		<h1><span> I N G L Ê S</span></h1>
+		</a>
 		<ul class="gallery">
 			<li>
 				<a href="ing1.html" target="_blank">
@@ -343,8 +383,9 @@
 				</a>
 			</li>
 		</ul>
-		
+		<a name="Geologia">
 		<h1><span> G E O L O G I A</span></h1>
+		</a>
 		<ul class="gallery">
 			<li>
 				<a href="Geo1.html" target="_blank">
