--- a/gallery.html
+++ b/gallery.html
@@ -243,7 +243,7 @@
 				</a>
 			</li>
 		</ul>
-		<a name="L.p">
+		<a name="Lp">
 				  <h1><span> L. P O R T U G U E S A</span></h1>
 		</a>
 		<ul class="gallery">
