--- a/gallery-single-post4.html
+++ b/gallery-single-post4.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Matéria - Mundocef</title>
+	<title>Física/centro de massa - Mundocef</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -35,7 +35,7 @@
 	<div id="body">
 		<h1><span>fisica</span></h1>
 		<div>
-			<iframe width="480" height="315" src="https://www.youtube.com/embed/Xz39S8upyxo"
+			<iframe width="400" height="200" src="https://www.youtube.com/embed/Xz39S8upyxo"
 			frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			
 			<div class="article">
