--- a/gallery-single-post1.html
+++ b/gallery-single-post1.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Matéria - Mundocef</title>
+	<title>Física/Movimento relativo - Mundocef</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 500px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -35,7 +35,7 @@
 	<div id="body">
 		<h1><span>Física</span></h1>
 		<div>
-			<iframe width="621" height="299" src="https://www.youtube.com/embed/OnJnfyqUxjU"
+			<iframe width="400" height="200" src="https://www.youtube.com/embed/OnJnfyqUxjU"
 		  frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		  
 			<div class="article">
