--- a/gallery-single-post5.html
+++ b/gallery-single-post5.html
@@ -4,9 +4,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Matéria - Mundocef</title>
+	<title>Matéria - Cefhub</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
+	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 510px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
 </head>
 <body>
