--- a/gallery-single-post3.html
+++ b/gallery-single-post3.html
@@ -4,9 +4,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Matéria - Mundocef</title>
+	<title>Física/centro de massa pt1 - Cefhub20</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
+	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 510px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
 </head>
 <body>
@@ -35,7 +35,7 @@
 	<div id="body">
 		<h1><span> Física </span></h1>
 		<div>
-			<iframe width="480" height="315" src="https://www.youtube.com/embed/atZ2CynfN5A"
+			<iframe width="370" height="400" src="https://www.youtube.com/embed/atZ2CynfN5A"
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				
 			<div class="article">
