--- a/mat1.html
+++ b/mat1.html
@@ -4,9 +4,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title> - Cefhub20</title>
+	<title> Matemática/funções logarítmicas- Cefhub20</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
+	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 510px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
 </head>
 <body>
@@ -64,7 +64,7 @@
 	<div id="body">
 		<h1><span>Matemática</span></h1>
 		<div>
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/HlGPnHkX5Fo"
+			<iframe width="370" height="400" src="https://www.youtube.com/embed/HlGPnHkX5Fo"
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			
 			<div class="article">
