--- a/mat2.html
+++ b/mat2.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Matéria - Mundocef</title>
+	<title>Física/Propriedade dos logarítimos - Cefhub</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -35,7 +35,7 @@
 	<div id="body">
 		<h1><span>Matemática</span></h1>
 		<div>
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/L6qDyb2w7sY"
+			<iframe width="370" height="400" src="https://www.youtube.com/embed/L6qDyb2w7sY"
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			
 			<div class="article">
