--- a/mat4.html
+++ b/mat4.html
@@ -67,8 +67,9 @@
 	<div id="body">
 		<h1><span>Matemática</span></h1>
 		<div>
-			<iframe width="370" height="400" src="https://www.youtube.com/watch?v=yEl-ShKA960/embed/Etebz6pcono" 
-frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/yEl-ShKA960" 
+				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			
 			<div class="article">
 				<h4>Equação logarítmica pt2</h4>
 			</div>
