--- a/mat5.html
+++ b/mat5.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Matemática/- Mundocef</title>
+	<title>Matemática/Exerçícios sobre equação logarítmica- Cefhub</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 510px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
