--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 		<div id="featured">
 			<img src="images/back1.jpg" alt="">
 			<div>
-				<h2>CEF</h2>
-				<span>Matéria, Tarefas, explicações</span>
-				<span>Só para ti</span>
+				<h2>CEFHUb</h2>
+				<span>Matéria, Tarefas, Explicações</span>
+				<span>Para os alunos da 12/F.B</span>
 				<span>Desde 5/5/2020.</span>
 				<a href="blog.html" class="more">VER MAIS</a>
 			</div>
