--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<span>Matéria, Tarefas, Explicações</span>
 				<span>Para os alunos da 12/F.B</span>
 				<span>Desde 5/5/2020.</span>
-				<a href="blog.html" class="more">VER MAIS</a>
+				<a href="gallery.html" class="more">VER MAIS</a>
 			</div>
 		</div>
 		<ul>
