--- a/gallery-single-post3.html
+++ b/gallery-single-post3.html
@@ -4,9 +4,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Física/centro de massa pt1 - Cefhub20</title>
+	<title>Física/centro de massa pt1 - Cefhub</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 510px)">
+	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
 </head>
 <body>
@@ -48,7 +48,7 @@
 	</div>
 	<div id="footer">
 		<div>
-			<p>&copy; 2023 by Mustacchio. All rights reserved.</p>
+			<p>&copy; 2023 by RiquezaXIX. All rights reserved.</p>
 			<ul>
 				<li>
 					<a href="https://twitter.com/InacioCM19"  target="_blank" id="twitter">twitter</a>
