--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Contact - Mundocef</title>
+	<title>Contact - Cefhub</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -24,6 +24,37 @@
 			</li>
 			<li>
 				<a href="gallery.html">matéria</a>
+				<ul class="sub-menu"> 
+				    <li>
+				          <a href="gallery.html#Matemática">Matemática</a>
+				      </li>
+				     <li>
+			          <a href="gallery.html#Química">Química</a>
+			             </li>
+			        <li>
+			          <a href="gallery.html#Filosofia">Filosofia</a>
+			        </li>
+			        <li>
+			          <a href="gallery.html#Biologia">Biologia</a>
+			         </li>
+			         <li>
+			          <a href="gallery.html#Lp">L.Portuguesa</a>
+			         </li>
+			         <li>
+			          <a href="gallery.html#G.D">G.Descritiva</a> 
+			          </li>
+			          <li> 
+			          <a href="gallery.html#Psicologia">Psicologia</a>
+			          <li>
+			          <a href="gallery.html#Inglês">Inglês</a>
+			         </li>
+			         <li>
+			          <a href="gallery.html#Geologia">Geologia</a>
+					</li>
+				</ul>
+				<span class="arrow">&#9660;</span>
+
+
 			</li>
 			<li>
 				<a href="blog.html">blog</a>
@@ -36,12 +67,12 @@
 	<div id="body">
 		<h1><span>EM CASO DE DÚVIDAS PUXA</span></h1>
 		<form action="thankyou/" method="post">
-			<input type="text" name="fname" id="fname" value="name">
-			<input type="text" name="address" id="address" value="address">
+			<input type="text" name="fname" id="fname" value="nome">
+			<input type="text" name="address" id="address" value="endereço">
 			<input type="text" name="email" id="email" value="email">
-			<input type="text" name="phone" id="phone" value="phone number">
+			<input type="text" name="phone" id="phone" value="número do telefone">
 			<textarea name="message" id="message">message</textarea>
-			<input type="submit" name="send" id="send" value="send">
+			<a href="mailto: inaciochrisss@gmail.com"><input type="submit" name="send" id="send" value="enviar"></a>
 		</form>
 	</div>
 	<div id="footer">
