--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
 			<input type="text" name="email" id="email" value="email">
 			<input type="text" name="phone" id="phone" value="número do telefone">
 			<textarea name="message" id="message">message</textarea>
-			<a href="mailto: inaciochrisss@gmail.com">Enviar</a>
+			<input type="submit" name="send" id="send" value="enviar">
 		</form>
 	</div>
 	<div id="footer">
