--- a/blog-single-post1.html
+++ b/blog-single-post1.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Blog Single Post - MundoCef</title>
+	<title>Blog - Cefhub</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -23,6 +23,37 @@
 			</li>
 			<li>
 				<a href="gallery.html">Matéria</a>
+				<ul class="sub-menu"> 
+				    <li>
+				          <a href="gallery.html#Matemática">Matemática</a>
+				      </li>
+				     <li>
+			          <a href="gallery.html#Química">Química</a>
+			             </li>
+			        <li>
+			          <a href="gallery.html#Filosofia">Filosofia</a>
+			        </li>
+			        <li>
+			          <a href="gallery.html#Biologia">Biologia</a>
+			         </li>
+			         <li>
+			          <a href="gallery.html#Lp">L.Portuguesa</a>
+			         </li>
+			         <li>
+			          <a href="gallery.html#G.D">G.Descritiva</a> 
+			          </li>
+			          <li> 
+			          <a href="gallery.html#Psicologia">Psicologia</a>
+			          <li>
+			          <a href="gallery.html#Inglês">Inglês</a>
+			         </li>
+			         <li>
+			          <a href="gallery.html#Geologia">Geologia</a>
+					</li>
+				</ul>
+				<span class="arrow">&#9660;</span>
+
+
 			</li>
 			<li class="selected">
 				<a href="blog.html">blog</a>
@@ -33,15 +64,17 @@
 		</ul>
 	</div>
 	<div id="body">
-		<h1><span>Vazio</span></h1>
+		<h1><span>Detalhes sobre o site</span></h1>
 		<div>
-			<img src="images/.jpg" alt="">
+			<img src="images/back2.jpg" alt="">
 
 
 			<div class="article">
-				<h2> Sem conteúdo</h2>
+				<h2>Para usurários de IOS e Android </h2>
 				<p>
-			
+			            Para ter a melhor experiência durante as visitas no site, Cefhub, recomendamos o uso de um computador Mac ou Windows. Caso não tenha acesso aos mesmos,
+				o IOS será eficaz e o android será limitado por não poder ter acesso directo aos conteúdos pdfs encontrados no site, mas se abrir o site pela chrome
+				(Google chrome), os usuários dos dispositivos android poderão visualizar normalmente os conteúdos encontrados no formato PDF. Obrigado pela compreensão.
 				</p>
 			</div>
 		</div>
