--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Blog - Mundocef</title>
+	<title>Blog - Cefhub</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -23,6 +23,37 @@
 			</li>
 			<li>
 				<a href="gallery.html">matéria</a>
+				<ul class="sub-menu"> 
+				    <li>
+				          <a href="gallery.html#Matemática">Matemática</a>
+				      </li>
+				     <li>
+			          <a href="gallery.html#Química">Química</a>
+			             </li>
+			        <li>
+			          <a href="gallery.html#Filosofia">Filosofia</a>
+			        </li>
+			        <li>
+			          <a href="gallery.html#Biologia">Biologia</a>
+			         </li>
+			         <li>
+			          <a href="gallery.html#Lp">L.Portuguesa</a>
+			         </li>
+			         <li>
+			          <a href="gallery.html#G.D">G.Descritiva</a> 
+			          </li>
+			          <li> 
+			          <a href="gallery.html#Psicologia">Psicologia</a>
+			          <li>
+			          <a href="gallery.html#Inglês">Inglês</a>
+			         </li>
+			         <li>
+			          <a href="gallery.html#Geologia">Geologia</a>
+					</li>
+				</ul>
+				<span class="arrow">&#9660;</span>
+
+
 			</li>
 			<li class="selected">
 				<a href="blog.html">blog</a>
@@ -41,9 +72,9 @@
 						<img src="images/blog1.jpg" alt="">
 					</a>
 					<div>
-						<h3>Vazio</h3>
+						<h3>Para usurários de IOS e Android</h3>
 						<p>
-						    Sem conteúdo...
+						      Para ter a melhor experiência durante as visitas no site, Cefhub, recomendamos o...
 						</p>
 						<a href="blog-single-post1.html" class="more">ler isto</a>
 					</div>
