--- a/blog.html
+++ b/blog.html
@@ -69,10 +69,10 @@
 			<ul>
 				<li>
 					<a href="blog-single-post.html" class="figure">
-						<img src="images/blog1.jpg" alt="">
+						<img src="images/.jpg" alt="">
 					</a>
 					<div>
-						<h3>Para usurários de IOS e Android</h3>
+						<h3>Para os usurários de IOS e Android</h3>
 						<p>
 						      Para ter a melhor experiência durante as visitas no site, Cefhub, recomendamos o...
 						</p>
