--- a/blog.html
+++ b/blog.html
@@ -68,8 +68,8 @@
 		<div>
 			<ul>
 				<li>
-					<a href="blog-single-post.html" class="figure">
-						<img src="images/.jpg" alt="">
+					<a href="blog-single-post1.html" class="figure">
+						<img src="images/blog1.jpg" alt="">
 					</a>
 					<div>
 						<h3>Para os usurários de IOS e Android</h3>
@@ -80,7 +80,7 @@
 					</div>
 				</li>
 				<li>
-					<a href="blog-single-post.html" class="figure">
+					<a href="blog-single-post2.html" class="figure">
 						<img src="images/body.jpg" alt="">
 					</a>
 					<div>
@@ -93,7 +93,7 @@
 					</div>
 				</li>
 				<li>
-					<a href="blog-single-post.html" class="figure">
+					<a href="blog-single-post.html3" class="figure">
 						<img src="images/quim1.jpg" alt="">
 					</a>
 					<div>
