--- a/blog.html
+++ b/blog.html
@@ -81,12 +81,12 @@
 				</li>
 				<li>
 					<a href="blog-single-post2.html" class="figure">
-						<img src="images/body.jpg" alt="">
+						<img src="images/calblog.jpg" alt="">
 					</a>
 					<div>
-						<h3>Vazio</h3>
+						<h3>Calendário</h3>
 						<p>
-							Sem conteúdo
+							Calendário das aulas online.
 
 						</p>
 						<a href="blog-single-post2.html" class="more">ler isto</a>
