--- a/blog.html
+++ b/blog.html
@@ -81,7 +81,7 @@
 				</li>
 				<li>
 					<a href="blog-single-post2.html" class="figure">
-						<img src="images/calblog.jpg" alt="">
+						<img src="images/calblog.jpeg" alt="">
 					</a>
 					<div>
 						<h3>Calendário</h3>
