--- a/gallery-single-post6.html
+++ b/gallery-single-post6.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Matéria - Mundocef</title>
+	<title>Física/Fórmulas - Cefhub</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -23,6 +23,36 @@
 			</li>
 			<li class="selected">
 				<a href="gallery.html">Matéria</a>
+				<ul class="sub-menu"> 
+				    <li>
+				          <a href="gallery.html#Matemática">Matemática</a>
+				      </li>
+				     <li>
+			          <a href="gallery.html#Química">Química</a>
+			             </li>
+			        <li>
+			          <a href="gallery.html#Filosofia">Filosofia</a>
+			        </li>
+			        <li>
+			          <a href="gallery.html#Biologia">Biologia</a>
+			         </li>
+			         <li>
+			          <a href="gallery.html#Lp">L.Portuguesa</a>
+			         </li>
+			         <li>
+			          <a href="gallery.html#G.D">G.Descritiva</a> 
+			          </li>
+			          <li> 
+			          <a href="gallery.html#Psicologia">Psicologia</a>
+			          <li>
+			          <a href="gallery.html#Inglês">Inglês</a>
+			         </li>
+			         <li>
+			          <a href="gallery.html#Geologia">Geologia</a>
+					</li>
+				</ul>
+				<span class="arrow">&#9660;</span>
+
 			</li>
 			<li>
 				<a href="blog.html">blog</a>
@@ -38,8 +68,9 @@
 			<img src="images/green.png" alt="">
 			<div class="article">
 				<h4>Sem conteúdo</h4>
-				<p>
-				</p>
+				 <div class="container"
+				<embed src="files/fisica/fórmulas.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/>
+			  </div>
 			</div>
 		</div>
 	</div>
