--- a/gallery-single-post3.html
+++ b/gallery-single-post3.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Física/centro de massa pt1 - Cefhub</title>
+	<title>Físisca/Exercícios sobre relatividade pdf- Cefhub</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -23,6 +23,36 @@
 			</li>
 			<li class="selected">
 				<a href="gallery.html">matéria</a>
+				<ul class="sub-menu"> 
+				    <li>
+				          <a href="gallery.html#Matemática">Matemática</a>
+				      </li>
+				     <li>
+			          <a href="gallery.html#Química">Química</a>
+			             </li>
+			        <li>
+			          <a href="gallery.html#Filosofia">Filosofia</a>
+			        </li>
+			        <li>
+			          <a href="gallery.html#Biologia">Biologia</a>
+			         </li>
+			         <li>
+			          <a href="gallery.html#Lp">L.Portuguesa</a>
+			         </li>
+			         <li>
+			          <a href="gallery.html#G.D">G.Descritiva</a> 
+			          </li>
+			          <li> 
+			          <a href="gallery.html#Psicologia">Psicologia</a>
+			          <li>
+			          <a href="gallery.html#Inglês">Inglês</a>
+			         </li>
+			         <li>
+			          <a href="gallery.html#Geologia">Geologia</a>
+					</li>
+				</ul>
+				<span class="arrow">&#9660;</span>
+
 			</li>
 			<li>
 				<a href="blog.html">blog</a>
@@ -33,16 +63,14 @@
 		</ul>
 	</div>
 	<div id="body">
-		<h1><span> Física </span></h1>
+		<h1><span>FÍSICA</span></h1>
 		<div>
-			<iframe width="370" height="400" src="https://www.youtube.com/embed/atZ2CynfN5A"
-				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				
 			<div class="article">
-				<h4>Centro de Massa pt1</h4>
-				<p>
-				   Bom, camaradas...
-				</p>
+				<h4>Exércícios Sobre Relatividade</h4>
+			  <div class="container">
+				  <embed src="files/fisica/esr20.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/> 
+			  </div>
+				
 			</div>
 		</div>
 	</div>
