--- a/gallery-single-post6.html
+++ b/gallery-single-post6.html
@@ -65,12 +65,12 @@
 	<div id="body">
 		<h1><span>Físcia</span></h1>
 		<div>
-			<img src="images/green.png" alt="">
 			<div class="article">
-				<h4>Sem conteúdo</h4>
+				<h4>Fórmulas</h4>
 				 <div class="container"
 				<embed src="files/fisica/fórmulas.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/>
 			  </div>
+			
 			</div>
 		</div>
 	</div>
