--- a/gallery-single-post6.html
+++ b/gallery-single-post6.html
@@ -63,7 +63,7 @@
 		</ul>
 	</div>
 	<div id="body">
-		<h1><span>Físcia</span></h1>
+		<h1><span>Física</span></h1>
 		<div>
 			<div class="article">
 				<h4>Fórmulas</h4>
