--- a/gallery-single-post2.html
+++ b/gallery-single-post2.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Físisca/Movimento relativo pdf- Cefhub</title>
+	<title>Física/Movimento relativo pdf- Cefhub</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -19,7 +19,7 @@
 				<a href="index.html">home</a>
 			</li>
 			<li>
-				<a href="about.html">about</a>
+				<a href="about.html">sobre nós</a>
 			</li>
 			<li class="selected">
 				<a href="gallery.html">matéria</a>
@@ -64,15 +64,15 @@
 		</ul>
 	</div>
 	<div id="body">
-		<h1><span>Física</span></h1>
+		<h1><span>biologia</span></h1>
 		<div>
-			<div class="article">
-				<h4>Movimento relativo</h4>
-				
-			    <div class="container"
-			       <embed src="files/fisica/omer.pdf#toolbar=0" type="application/pdf" width="100%" height="600px/>
-			   </div>
 			
+			<div class="article">
+				<h4>Orgão dos Sentidos</h4>
+				
+				<div class="container">
+				  <embed src="files/bio/ods.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/> 
+				</div>
 			</div>
 		</div>
 	</div>
