--- a/gallery-single-post2.html
+++ b/gallery-single-post2.html
@@ -64,14 +64,14 @@
 		</ul>
 	</div>
 	<div id="body">
-		<h1><span>biologia</span></h1>
+		<h1><span>Física</span></h1>
 		<div>
 			
 			<div class="article">
-				<h4>Orgão dos Sentidos</h4>
+				<h4>Movimento relativo pdf</h4>
 				
 				<div class="container">
-				  <embed src="files/bio/ods.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/> 
+				  <embed src="files/fisica/omer.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/> 
 				</div>
 			</div>
 		</div>
