--- a/gallery-single-post6.html
+++ b/gallery-single-post6.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Física/Fórmulas pdf - Cefhub</title>
+	<title>Física/Fórmulas pdf- Cefhub</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -22,7 +22,7 @@
 				<a href="about.html">sobre nós</a>
 			</li>
 			<li class="selected">
-				<a href="gallery.html">Matéria</a>
+				<a href="gallery.html">matéria</a>
 				<ul class="sub-menu"> 
 				    <li>
 				          <a href="gallery.html#Matemática">Matemática</a>
@@ -53,6 +53,7 @@
 				</ul>
 				<span class="arrow">&#9660;</span>
 
+
 			</li>
 			<li>
 				<a href="blog.html">blog</a>
@@ -65,18 +66,19 @@
 	<div id="body">
 		<h1><span>Física</span></h1>
 		<div>
-			<div class="article">
-				<h4>Fórmulas</h4>
-				 <div class="container"
-				<embed src="files/fisica/fórmulas.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/>
-			  </div>
 			
+			<div class="article">
+				<h4>Fórmulas pdf</h4>
+				
+				<div class="container">
+				  <embed src="files/fisica/fórmulas.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/> 
+				</div>
 			</div>
 		</div>
 	</div>
 	<div id="footer">
 		<div>
-			<p>&copy; 2020 by RiquezaXIX. All rights reserved.</p>
+			<p>&copy; 2023 by RiquezaXIX. All rights reserved.</p>
 			<ul>
 				<li>
 					<a href="https://twitter.com/InacioCM19"  target="_blank" id="twitter">twitter</a>
