--- a/blog-single-post1.html
+++ b/blog-single-post1.html
@@ -72,8 +72,8 @@
 			<div class="article">
 				<h2>Para os usurários de IOS e Android </h2>
 				<p>
-			            Para ter a melhor experiência durante as visitas no site, Cefhub, recomendamos o uso de um computador Mac ou Windows. Caso não tenha acesso aos mesmos,
-				o IOS será eficaz e o android será limitado por não poder ter acesso directo aos conteúdos pdfs encontrados no site, mas se abrir o site pela chrome
+			            Para ter a melhor experiência durante as visitas no site Cefhub, recomendamos o uso de um computador Mac ou Windows. Caso não tenha acesso aos mesmos,
+				os dispositivos IOS serão eficazes e os dispositivos android serão limitados por não poder terem acesso directo aos conteúdos pdfs encontrados no site, mas se abrir o site pela chrome
 				(Google chrome), os usuários dos dispositivos android poderão visualizar normalmente os conteúdos encontrados no formato PDF. Obrigado pela compreensão.
 				</p>
 			</div>
