--- a/qui3.html
+++ b/qui3.html
@@ -69,7 +69,7 @@
 			<iframe width="370" height="400" src="https://www.youtube.com/embed/czgZo_eNcc0" 
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<div class="article">
-				<h4>Hidrocarbonetos aromáticos</h4>
+				<h4>Hidrocarbonetos aromáticos pt2 (benzeno continuação)</h4>
 			</div>
 		</div>
 	</div>
