--- a/qui4.html
+++ b/qui4.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Química/Hidrocarbonatos aromáticos - Cefhub</title>
+	<title>Química/Hidrocarbonetos aromáticos - Cefhub</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -68,7 +68,7 @@
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			
 			<div class="article">
-				<h4>Hidrocarbonatos aromáticos pt3 (continuação)</h4>
+				<h4>Hidrocarbonetos aromáticos pt3 (continuação)</h4>
 			</div>
 		</div>
 	</div>
