--- a/gallery.html
+++ b/gallery.html
@@ -166,6 +166,11 @@
 					<img src="images/química.jpg" alt="">
 				</a>
 			</li>
+			<li>
+				<a href="qui7.html" target="_blank">
+					<img src="images/química.jpg" alt="">
+				</a>
+			</li>
 			
 		</ul>
 		                     <a name="Filosofia">
