--- a/mat2.html
+++ b/mat2.html
@@ -23,6 +23,35 @@
 			</li>
 			<li class="selected">
 				<a href="gallery.html">Matéria</a>
+				<ul class="sub-menu"> 
+				    <li>
+				          <a href="gallery.html#Matemática">Matemática</a>
+				      </li>
+				     <li>
+			          <a href="gallery.html#Química">Química</a>
+			             </li>
+			        <li>
+			          <a href="gallery.html#Filosofia">Filosofia</a>
+			        </li>
+			        <li>
+			          <a href="gallery.html#Biologia">Biologia</a>
+			         </li>
+			         <li>
+			          <a href="gallery.html#Lp">L.Portuguesa</a>
+			         </li>
+			         <li>
+			          <a href="gallery.html#G.D">G.Descritiva</a> 
+			          </li>
+			          <li> 
+			          <a href="gallery.html#Psicologia">Psicologia</a>
+			          <li>
+			          <a href="gallery.html#Inglês">Inglês</a>
+			         </li>
+			         <li>
+			          <a href="gallery.html#Geologia">Geologia</a>
+					</li>
+				</ul>
+				<span class="arrow">&#9660;</span>
 			</li>
 			<li>
 				<a href="blog.html">blog</a>
