--- a/gallery-single-post6.html
+++ b/gallery-single-post6.html
@@ -73,6 +73,7 @@
 				<div class="container">
 				  <embed src="files/fisica/fórmulas.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/> 
 				</div>
+				<p> Se estiver a usar android e não conseguir visualizar o doc pdf, por favor abra o site pelo chrome (Google chrome) </p>
 			</div>
 		</div>
 	</div>
