--- a/gallery-single-post3.html
+++ b/gallery-single-post3.html
@@ -66,7 +66,7 @@
 		<h1><span>FÍSICA</span></h1>
 		<div>
 			<div class="article">
-				<h4>Exércícios Sobre Relatividade</h4>
+				<h4>Exércícios Sobre Relatividade pdf</h4>
 			  <div class="container">
 				  <embed src="files/fisica/esr20.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/> 
 			  </div>
