--- a/blog-single-post1.html
+++ b/blog-single-post1.html
@@ -64,16 +64,16 @@
 		</ul>
 	</div>
 	<div id="body">
-		<h1><span>Detalhes sobre o site</span></h1>
+		<h1><span>Para usurários de IOS e Android</span></h1>
 		<div>
 			<img src="images/back2.jpg" alt="">
 
 
 			<div class="article">
-				<h2>Para os usurários de IOS e Android </h2>
+				<h2>Para usurários de IOS e Android </h2>
 				<p>
-			            Para ter a melhor experiência durante as visitas no site Cefhub, recomendamos o uso de um computador Mac ou Windows. Caso não tenha acesso aos mesmos,
-				os dispositivos IOS serão eficazes e os dispositivos android serão limitados por não poder terem acesso directo aos conteúdos pdfs encontrados no site, mas se abrir o site pela chrome
+			            Para a melhor experiência durante as visitas no site Cefhub, recomendamos o uso de um computador Mac ou Windows. Caso não tenha acesso aos mesmos,
+				os dispositivos IOS serão eficazes e os dispositivos android serão limitados por não poder terem acesso directo aos conteúdos pdfs encontrados no site,  o site pela chrome
 				(Google chrome), os usuários dos dispositivos android poderão visualizar normalmente os conteúdos encontrados no formato PDF. Obrigado pela compreensão.
 				</p>
 			</div>
