--- a/blog.html
+++ b/blog.html
@@ -72,7 +72,7 @@
 						<img src="images/blog1.jpg" alt="">
 					</a>
 					<div>
-						<h3>Para os usurários de IOS e Android</h3>
+						<h3>Para usurários de IOS e Android</h3>
 						<p>
 						      Para ter a melhor experiência durante as visitas no site, Cefhub, recomendamos o...
 						</p>
