--- a/blog-single-post3.html
+++ b/blog-single-post3.html
@@ -33,9 +33,9 @@
 		</ul>
 	</div>
 	<div id="body">
-		<h1><span>Química</span></h1>
+		<h1><span></span></h1>
 		<div>
-			<img src="images/qui.png" alt="">
+			<img src="" alt="">
 			<div class="article">
 				<h2></h2>
 				
