--- a/blog-single-post1.html
+++ b/blog-single-post1.html
@@ -73,7 +73,7 @@
 				<h2>Para usurários de IOS e Android </h2>
 				<p>
 			            Para a melhor experiência durante as visitas no site Cefhub, recomendamos o uso de um computador Mac ou Windows. Caso não tenha acesso aos mesmos,
-				os dispositivos IOS serão eficazes mas os dispositivos android serão limitados por não terem acesso directo aos conteúdos pdfs encontrados no site. Mas se o site for aberto pela chrome
+				os dispositivos IOS serão eficazes porém os dispositivos android serão limitados por não terem acesso directo aos conteúdos documentos PDF encontrados no site. Mas, se o site for aberto pela chrome
 				(Google chrome), os usuários dos dispositivos android terão acesso aos documentos PDF encontrados no site.
 				</p>
 			</div>
