--- a/Geo1.html
+++ b/Geo1.html
@@ -25,6 +25,9 @@
 				<a href="gallery.html">matéria</a>
 				<ul class="sub-menu"> 
 				    <li>
+					    <a href="gallery.html#Física">Física</a>
+					</li>
+				    <li>
 				          <a href="gallery.html#Matemática">Matemática</a>
 				      </li>
 				     <li>
