--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,10 @@
 			</li>
 			<li class="selected">
 				<a href="gallery.html">matéria</a>
-				 <ul class="sub-menu"> 
+				 <ul class="sub-menu">
+					 <li>
+					    <a href="gallery.html#Física">Física</a>
+					</li>
 				    <li>
 				          <a href="gallery.html#Matemática">Matemática</a>
 				      </li>
@@ -62,7 +65,9 @@
 		</ul>
 	</div>
 	<div id="body">
-		<h1><span>F Í S I C A</span></h1>
+		<a name="Física">
+		<h1><span>F Í S I0 C A</span></h1>
+		</a>
 		
 		<ul class="gallery">
 			<li>
