--- a/gallery.html
+++ b/gallery.html
@@ -66,7 +66,7 @@
 	</div>
 	<div id="body">
 		<a name="Física">
-		<h1><span>F Í S I0 C A</span></h1>
+		<h1><span>F Í S I C A</span></h1>
 		</a>
 		
 		<ul class="gallery">
