--- a/gallery-single-post1.html
+++ b/gallery-single-post1.html
@@ -27,6 +27,9 @@
 				    <li>
 				          <a href="gallery.html#Matemática">Matemática</a>
 				      </li>
+					<li>
+					    <a href="gallery.html#Física">Física</a>
+					</li>
 				     <li>
 			          <a href="gallery.html#Química">Química</a>
 			             </li>
