--- a/gallery-single-post5.html
+++ b/gallery-single-post5.html
@@ -23,7 +23,10 @@
 			</li>
 			<li class="selected">
 				<a href="gallery.html">Matéria</a>
-				<ul class="sub-menu"> 
+				<ul class="sub-menu">
+					<li>
+					    <a href="gallery.html#Física">Física</a>
+					</li>
 				    <li>
 				          <a href="gallery.html#Matemática">Matemática</a>
 				      </li>
