--- a/Geo2.html
+++ b/Geo2.html
@@ -24,6 +24,39 @@
 			<li class="selected">
 				<a href="gallery.html">matéria</a>
 			</li>
+			<ul class="sub-menu"> 
+                                       <li>
+					    <a href="gallery.html#Física">Física</a>
+					</li>
+				    <li>
+				          <a href="gallery.html#Matemática">Matemática</a>
+				      </li>
+				     <li>
+			          <a href="gallery.html#Química">Química</a>
+			             </li>
+			        <li>
+			          <a href="gallery.html#Filosofia">Filosofia</a>
+			        </li>
+			        <li>
+			          <a href="gallery.html#Biologia">Biologia</a>
+			         </li>
+			         <li>
+			          <a href="gallery.html#Lp">L.Portuguesa</a>
+			         </li>
+			         <li>
+			          <a href="gallery.html#G.D">G.Descritiva</a> 
+			          </li>
+			          <li> 
+			          <a href="gallery.html#Psicologia">Psicologia</a>
+			          <li>
+			          <a href="gallery.html#Inglês">Inglês</a>
+			         </li>
+			         <li>
+			          <a href="gallery.html#Geologia">Geologia</a>
+					</li>
+				</ul>
+				<span class="arrow">&#9660;</span>
+
 			<li>
 				<a href="blog.html">blog</a>
 			</li>
