--- a/mat1.html
+++ b/mat1.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title> Matemática/funções logarítmicas- Cefhub20</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 510px)">
+	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
 </head>
 <body>
@@ -23,7 +23,10 @@
 			</li>
 			<li class="selected">
 				<a href="gallery.html">Matéria</a>
-				<ul class="sub-menu"> 
+				<ul class="sub-menu">
+                                       <li>
+					    <a href="gallery.html#Física">Física</a>
+					</li> 
 				    <li>
 				          <a href="gallery.html#Matemática">Matemática</a>
 				      </li>
