--- a/mat2.html
+++ b/mat2.html
@@ -24,6 +24,10 @@
 			<li class="selected">
 				<a href="gallery.html">Matéria</a>
 				<ul class="sub-menu"> 
+					
+                                       <li>
+					    <a href="gallery.html#Física">Física</a>
+					</li>
 				    <li>
 				          <a href="gallery.html#Matemática">Matemática</a>
 				      </li>
