--- a/gallery-single-post2.html
+++ b/gallery-single-post2.html
@@ -74,10 +74,9 @@
 				<h4>Movimento relativo pdf</h4>
 				
 				<div class="container">
-				  <embed src="https://drive.google.com/viewerng/
-                                          viewer?embedded=true&url=files/fisica/omer.pdf#toolbar=0" width="100" height="600">
+				  <embed src="https://drive.google.com/file/d/1TjSAmJ2ATAUlO96iphx0ofpwZWgBPbge/view?usp=sharing" width="100" height="600">
 				</div>
-				<p> Se estiver a usar android e não conseguir visualizar o doc pdf, por favor abra o site pelo chrome (Google chrome) </p>
+				<p> Se estiver a usar android e não conseguir visualizar o doc pdf, por favor abra o site pelo chrome (Google chrome). </p>
 			</div>
 		</div>
 	</div>
