--- a/gallery-single-post2.html
+++ b/gallery-single-post2.html
@@ -69,14 +69,13 @@
 	<div id="body">
 		<h1><span>Física</span></h1>
 		<div>
+			<iframe width="300" height="400" src="https://www.youtube.com/embed/OnJnfyqUxjU"
+		  frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			
 			<div class="article">
 				<h4>Movimento relativo pdf</h4>
 				
-				<div class="container">
-				  <embed src="files/fisica/omer.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/> 
-				</div>
-				<p> Se estiver a usar android e não conseguir visualizar o doc pdf, por favor abra o site pelo chrome (Google chrome). </p>
+				
 			</div>
 		</div>
 	</div>
