--- a/gallery-single-post3.html
+++ b/gallery-single-post3.html
@@ -71,7 +71,7 @@
 			<div class="article">
 				<h4>Exércícios Sobre Relatividade pdf</h4>
 			  <div class="container">
-				  <embed src="files/fisica/esr20.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/> 
+				  <iframe src="https://drive.google.com/file/d/1vNP5_ctS6wQxjH000XZK0TVlHxJQ5QtR/preview" width="100%" height="600px"></iframe>
 			  </div>
 				<p> Se estiver a usar android e não conseguir visualizar o doc pdf, por favor abra o site pelo chrome (Google chrome) </p>
 				
