--- a/gallery-single-post6.html
+++ b/gallery-single-post6.html
@@ -74,10 +74,9 @@
 				<h4>Fórmulas pdf</h4>
 				
 				<div class="container">
-				  <embed src="files/fisica/fórmulas.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/> 
+				  <iframe src="https://drive.google.com/file/d/1YPfvzUMmv6MS5D04ySsBbb2DlBnkPhGR/preview" width="100%" height="600px"></iframe> 
 				</div>
-				<p> Se estiver a usar android e não conseguir visualizar o doc pdf, por favor abra o site pelo chrome (Google chrome) </p>
-			</div>
+				
 		</div>
 	</div>
 	<div id="footer">
