--- a/blog-single-post3.html
+++ b/blog-single-post3.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Blog/Comunicado escola-família - Cefhub</title>
+	<title>Blog/Projecto-CEF - Cefhub</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -66,13 +66,13 @@
 		</ul>
 	</div>
 	<div id="body">
-		<h1><span>Comunicado escola-família</span></h1>
+		<h1><span></span></h1>
 		<div>
 			<img src="" alt="">
 			<div class="article">
-				<h2> Comunicado</h2>
+				<h2>Projecto “CEF – Novos tempos -Novas aprendizagens”</h2>
 			     <div class="container">
-				     <iframe src="https://drive.google.com/file/d/16yeQ1sXy7ShU57i_8lBX3-WlGrZiZA1t/preview" width="100%" height="600px"></iframe> 
+				    <iframe src="https://drive.google.com/file/d/1ngxoanPxzGZtCTkxZ4GbShZs4V3U1czT/preview" width="100%" height="600px"></iframe> 
 				</div>
 			</div>
 		</div>
