--- a/blog.html
+++ b/blog.html
@@ -96,13 +96,14 @@
 					</div>
 				</li>
 				<li>
-					<a href="blog-single-post.html3" class="figure">
-						<img src="images/quim1.jpg" alt="">
+					<a href="blog-single-post3.html" class="figure">
+						<img src="images/blog3.png" alt="">
 					</a>
 					<div>
-						<h3>Vazio</h3>
+						<h3>Projecto “CEF – Novos tempos -Novas aprendizagens”</h3>
 						<p>
-							Sem conteúdo
+						  Estimados Encarregados,tendo em conta as inúmeras solicitações...
+
 						</p>
 						<a href="blog-single-post3.html" class="more">ler isto</a>
 					</div>
