--- a/fil2.html
+++ b/fil2.html
@@ -23,14 +23,16 @@
 			</li>
 			<li class="selected">
 				<a href="gallery.html">matéria</a>
-			</li>
-			  <ul class="sub-menu"> 
-                                       <li>
+				<ul class="sub-menu"> 
+					 <li>
 					    <a href="gallery.html#Física">Física</a>
 					</li>
 				    <li>
 				          <a href="gallery.html#Matemática">Matemática</a>
 				      </li>
+					<li>
+					    <a href="gallery.html#Física">Física</a>
+					</li>
 				     <li>
 			          <a href="gallery.html#Química">Química</a>
 			             </li>
@@ -49,7 +51,7 @@
 			          <li> 
 			          <a href="gallery.html#Psicologia">Psicologia</a>
 			          </li>
-				  <li>
+				 <li>
 			          <a href="gallery.html#Inglês">Inglês</a>
 			         </li>
 			         <li>
@@ -57,11 +59,13 @@
 					</li>
 				</ul>
 				<span class="arrow">&#9660;</span>
+
+
 			</li>
 			<li>
 				<a href="blog.html">blog</a>
 			</li>
-			<li>
+                        <li>
 				<a href="contact.html">contact</a>
 			</li>
 		</ul>
