--- a/about.html
+++ b/about.html
@@ -18,14 +18,13 @@
 			<li>
 				<a href="index.html">home</a>
 			</li>
-			<li class="selected">
-				<a href="about.html">Sobre nós</a>
-			</li>
 			<li>
-				<a href="gallery.html">Matéria</a>
-				<ul class="sub-menu">
-					<ul class="sub-menu"> 
-                                       <li>
+				<a href="about.html">sobre nós</a>
+			</li>
+			<li class="selected">
+				<a href="gallery.html">matéria</a>
+				<ul class="sub-menu"> 
+					<li>
 					    <a href="gallery.html#Física">Física</a>
 					</li>
 				    <li>
@@ -48,8 +47,7 @@
 			          </li>
 			          <li> 
 			          <a href="gallery.html#Psicologia">Psicologia</a>
-			          </li>
-				  <li>
+			          <li>
 			          <a href="gallery.html#Inglês">Inglês</a>
 			         </li>
 			         <li>
@@ -57,6 +55,7 @@
 					</li>
 				</ul>
 				<span class="arrow">&#9660;</span>
+
 
 			</li>
 			<li>
