--- a/mat2.html
+++ b/mat2.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Matemática/Propriedade dos logarítimos - Cefhub</title>
+	<title>Matemática/Propriedade dos logaritimos - Cefhub</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -72,7 +72,7 @@
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			
 			<div class="article">
-				<h4>Propriedade dos logarítimos</h4>
+				<h4>Propriedade dos logaritimos</h4>
 			</div>
 		</div>
 	</div>
