--- a/mat1.html
+++ b/mat1.html
@@ -71,7 +71,7 @@
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			
 			<div class="article">
-				<h4>Revisão sobre a definição e cálculo de logarítmo</h4>
+				<h4>Revisão sobre a definição e cálculo de logaritmo</h4>
 			</div>
 		</div>
 	</div>
