--- a/index.html
+++ b/index.html
@@ -79,19 +79,19 @@
 		</div>
 		<ul>
 			<li>
-				<a href="gallery.html" target="blank">
+				<a href="gallery.html#Física" target="blank">
 					<img src="images/physcs.jpg" alt="">
 					<span>física</span>
 				</a>
 			</li>
 			<li>
-				<a href="gallery.html" target="_blank">
+				<a href="gallery.html#Biologia" target="_blank">
 					<img src="images/bio.jpg" alt="">
 					<span>biologia</span>
 				</a>
 			</li>
 			<li>
-				<a href="gallery.html" target="_blank">
+				<a href="gallery.html#G.D" target="_blank">
 					<img src="images/tar12.jpg" alt="">
 					<span>Geometria descritiva</span>
 				</a>
