--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 				</a>
 			</li>
 			<li>
-				<a href="gallery.html#G.D" target="_blank">
-					<img src="images/tar12.jpg" alt="">
-					<span>Geometria descritiva</span>
+				<a href="gallery.html#Filosofia" target="_blank">
+					<img src="images/filosofia.jpg" alt="">
+					<span>Filosofia</span>
 				</a>
 			</li>
 		</ul>
