--- a/gallery-single-post2.html
+++ b/gallery-single-post2.html
@@ -74,7 +74,7 @@
 		  frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			
 			<div class="article">
-				<h4>Movimento relativo pdf</h4>
+				<h4>Movimento relativo </h4>
 			</div>
 		</div>
 	</div>
