--- a/Geo2.html
+++ b/Geo2.html
@@ -68,9 +68,8 @@
 	<div id="body">
 		<h1><span>geologia</span></h1>
 		<div>
-		      <div class="iframe-container" style="overflow: hidden; padding-top: 56.25%; position: relative;">
-    	<iframe allow="microphone; camera" style="border: 0; height: 100%; left: 0; position: absolute; top: 0; width: 100%;" sandbox="allow-forms allow-scripts" src="https://success.zoom.us/wc/join/{meeting-id}" frameborder="0"></iframe>
-</div>
+		    <iframe style="border:none; height: 600px; width: 100%;" 
+			    src="https://zoom.us/wc/{meeting-id}/join?prefer=0&un=TWluZGF1Z2Fz" sandbox="allow-forms allow-scripts allow-same-origin" allow="microphone; camera"></iframe>
 			<div class="article">
 			<h4>Zoom</h4> 
 			
